# game

./: CMakeLists.txt
doc/: Doxyfile
doc/html/: animatedsprite_8cpp.html  animatedsprite_8h.html  animatedsprite_8h_source.html  annotated.html  class_game-members.html  class_game.html  class_renderer_1_1_animated_sprite-members.html  class_renderer_1_1_animated_sprite.html  class_renderer_1_1_shader_program-members.html  class_renderer_1_1_shader_program.html  class_renderer_1_1_sprite-members.html  class_renderer_1_1_sprite.html  class_renderer_1_1_texture2d-members.html  class_renderer_1_1_texture2d.html  class_resource_manager-members.html  class_resource_manager.html  class_shader_programm.html  classes.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7bc5e25958a2fb25a8561f3aa0def6c5.html  dir_fa3b942b33b04fef8622e6ed9abffc5c.html  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  (+91 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_3.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+41 more)
res/: resources.json
res/shaders/: fragment.txt  shader2d.frag  shader2d.vert  sprite.frag  sprite.vert  vertex.txt
src/: main.cpp
src/game/: game.cpp  game.h  tank.cpp  tank.h
src/renderer/: animatedsprite.cpp  animatedsprite.h  ebo.cpp  ebo.h  renderer.cpp  renderer.h  shaderprogram.cpp  shaderprogram.h  sprite.cpp  sprite.h  texture2d.cpp  texture2d.h  textureatlas.cpp  textureatlas.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vbolayout.cpp  vbolayout.h
src/resources/: resourcemanager.cpp  resourcemanager.h  stb_image.h
(+8 files in other folders)
